--- a/coffeemach/ServidorCentral/src/main/resources/server.cfg
+++ b/coffeemach/ServidorCentral/src/main/resources/server.cfg
@@ -1,4 +1,4 @@
-Server.Endpoints = tcp -h hgrid3 -p 9096
-ConexionBD = jdbc:postgresql://hgrid2:5432/carvi_coffeemachine
-usuarioBD = carvicoffeemach
-paswordBD = carvi
+Server.Endpoints = tcp -h localhost -p 12345
+ConexionBD = jdbc:postgresql://localhost:5430/coffeemachine
+usuarioBD = brayan
+paswordBD = 2003
