--- a/coffeemach/coffeeMach/src/main/resources/coffeMach.cfg
+++ b/coffeemach/coffeeMach/src/main/resources/coffeMach.cfg
@@ -1,4 +1,4 @@
-CoffeMach.Endpoints = default -h 10.147.19.158 -p 12346
+CoffeMach.Endpoints = default -h xhgrid7 -p 12346
 
 alarmas = Alarmas:tcp -h 10.147.19.31 -p 12345
 ventas = Ventas:tcp -h 10.147.19.31 -p 12345
