--- a/coffeemach/cmLogistics/src/main/resources/CmLogistic.cfg
+++ b/coffeemach/cmLogistics/src/main/resources/CmLogistic.cfg
@@ -1,2 +1,2 @@
-ServerCentral = logistica:tcp -h localhost -p 12345
-MaquinaCafe = abastecer:default -h localhost -p 12346
+ServerCentral = logistica:tcp -h 10.147.19.31 -p 12345
+MaquinaCafe = abastecer:default -h 10.147.19.122 -p 12346
